--- a/View/global.css
+++ b/View/global.css
@@ -1,7 +1,16 @@
 body {
   height: 300vh;
+  margin: 0;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1;
+  margin: 0;
+}
 * {
   font-family: "Nanum-angle";
   font-weight: 600;
