--- a/View/HomePage/Home.html
+++ b/View/HomePage/Home.html
@@ -25,9 +25,32 @@
     </header>
     <!-- 본문 -->
     <main class="main">
-      <section id="search">
-        <h2>검색창</h2>
-        <p>궁금한 영화나 TV 프로그램 또는 인물을 검색해보세요!</p>
+      <section class="search-background">
+        <div class="search-box">
+          <div class="title">
+            <h2>환영합니다.</h2>
+            <h3>궁금한 영화, TV 프로그램 및 인물등을 검색해 보세요.</h3>
+          </div>
+          <div class="search">
+            <form
+              class="search-inner-form"
+              action="/search?language=ko"
+              method="get"
+              accept-charset="UTF-8"
+            >
+              <input type="hidden" name="language" value="ko" />
+              <label
+                ><input
+                  class="inner-search"
+                  type="text"
+                  placeholder="영화, TV 프로그램, 인물 검색.."
+                  name="query"
+                  spellcheck="false"
+              /></label>
+              <input class="submit-button" type="submit" value="Search" />
+            </form>
+          </div>
+        </div>
       </section>
 
       <section id="trend">
