--- a/View/HomePage/Home.html
+++ b/View/HomePage/Home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./home.css" />
     <link rel="stylesheet" href="../global.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
-    <script src="../../Control/controlHomePage.js" defer></script>
+    <script type="module" src="../../Control/main.js" defer></script>
     <title>내 웹사이트</title>
   </head>
   <body>
