feat : trend section 기능 추가
- 주단위의 인기순 영화 나열

--- a/View/HomePage/Home.html
+++ b/View/HomePage/Home.html
@@ -53,9 +53,9 @@
         </div>
       </section>
 
-      <section id="trend">
-        <h2>인기 급상승 컨텐츠!</h2>
-        <p>요즘 인기가 급상승 중인 컨텐츠를 만나보세요!</p>
+      <section id="trend-section">
+        <h2 class="section-title">인기 급상승 컨텐츠!</h2>
+        <div class="trend-movie-list"></div>
       </section>
 
       <section id="trailer">
