--- a/View/global-variable.css
+++ b/View/global-variable.css
@@ -3,6 +3,7 @@
   --LogoColor: 56, 180, 192;
   --tmdbLightGreen: 30, 213, 169;
   --tmdbLightBlue: 1, 180, 228;
+  --imageBorderRadius: 8px;
 }
 
 @font-face {
